--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@netlify/blobs": "^10.4.3",
     "@stripe/stripe-js": "^4.10.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.65.0",
     "react-imask": "^7.6.1",
     "react-router-dom": "^7.9.4",
+    "resend": "^6.5.2",
     "stripe": "^14.25.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.18",
